--- a/v2/manifest.json
+++ b/v2/manifest.json
@@ -18,7 +18,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.APIException.html",
-          "hash": "JCrVMTcW7ytYaFr5W6vORA=="
+          "hash": "UR5fMqS1Pf0gIJ4yg7/zDg=="
         }
       },
       "is_incremental": false,
@@ -30,7 +30,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.AuthenticationException.html",
-          "hash": "zbvZmZPoSvlOfgo22qHv8g=="
+          "hash": "1k7OMXz7DOwUSZOvA+T61w=="
         }
       },
       "is_incremental": false,
@@ -42,7 +42,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.BaseSDKException.html",
-          "hash": "AVf5i/BUkhPewmb0klV1OQ=="
+          "hash": "FYoZ4fE6zrwvhRZ5E7wOWw=="
         }
       },
       "is_incremental": false,
@@ -54,7 +54,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.ConnectionAlreadyEstablishedException.html",
-          "hash": "6ilSaeYi/ibBtzQMtmzKiQ=="
+          "hash": "wXZuB3fSECMbMEWEJncBIA=="
         }
       },
       "is_incremental": false,
@@ -66,7 +66,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.ConnectionException.html",
-          "hash": "qETTKySovvjoVB6TZ4iynQ=="
+          "hash": "uxHAKUovRwGiq6yKqKfLHA=="
         }
       },
       "is_incremental": false,
@@ -78,7 +78,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.ConnectionTerminatedException.html",
-          "hash": "wyW1cHywX3SyUU3HW4Dk/w=="
+          "hash": "7hmZJCbArE232OxzUlL0bg=="
         }
       },
       "is_incremental": false,
@@ -90,7 +90,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.CoreException.html",
-          "hash": "CSzN8UpF0Le18C6WJ6rX/A=="
+          "hash": "Y07NqxE1gfIyYxg9VXQ0+Q=="
         }
       },
       "is_incremental": false,
@@ -102,7 +102,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.DTO.NetworkGeolocation.html",
-          "hash": "smpG2uzi4wPzTK7Nrwi9RA=="
+          "hash": "3efp6yYE2W46lTQaZaBCAg=="
         }
       },
       "is_incremental": false,
@@ -114,7 +114,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.DTO.OpenVpnConfiguration.html",
-          "hash": "kntfZcC/Fbklubhf68x+uQ=="
+          "hash": "+ekgjRQTEvVEyB0XlvaREA=="
         }
       },
       "is_incremental": false,
@@ -126,7 +126,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.DTO.RasConfiguration.html",
-          "hash": "1vt1DG1MWrNggQEIAlhEQw=="
+          "hash": "q1hueQqzI26jzcaReVKokQ=="
         }
       },
       "is_incremental": false,
@@ -138,7 +138,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.DTO.html",
-          "hash": "/H/dqk0bvM4LCPiI0w2rHQ=="
+          "hash": "Ri7UQeuBqOWYDrt7B+tT+Q=="
         }
       },
       "is_incremental": false,
@@ -150,7 +150,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.EmptyAvailableVpnProtocolsException.html",
-          "hash": "U2SKoEH2LvJR65iIFpbkKg=="
+          "hash": "mezh3ddurT+r/0JLYIO3qg=="
         }
       },
       "is_incremental": false,
@@ -162,7 +162,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.AccountStatus.html",
-          "hash": "/tNZMzrZEPK/CeyAq1jjNA=="
+          "hash": "RlyrZ5m4mFs6+vlK8GNq1A=="
         }
       },
       "is_incremental": false,
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.AuthenticationStatus.html",
-          "hash": "fjMHXln5SVRAfkJoGNJnmQ=="
+          "hash": "gLXUmxbYr8DynuyvHWz4Ag=="
         }
       },
       "is_incremental": false,
@@ -186,7 +186,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.ConnectionStatus.html",
-          "hash": "SAy9HfYeirXHBJj6OGPISA=="
+          "hash": "98bFOVdegk95sJBZUn5P3g=="
         }
       },
       "is_incremental": false,
@@ -198,7 +198,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.DriverInstallResult.html",
-          "hash": "lR/bnOxVgCwuXPES4UmFaw=="
+          "hash": "IwcD/pXYIeLiquSAGMmg8g=="
         }
       },
       "is_incremental": false,
@@ -210,7 +210,19 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.ErrorType.html",
-          "hash": "hJ9bkFZ1kJPuMOhXlvERmg=="
+          "hash": "RYoBjCG4NBH2qR/wHty/QQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/VpnSDK.Enums.LoadLevel.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/VpnSDK.Enums.LoadLevel.html",
+          "hash": "q+m0xHm+tyDJ4of/HCjB+g=="
         }
       },
       "is_incremental": false,
@@ -222,7 +234,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.NetworkConnectionType.html",
-          "hash": "4/9W97pDIdjAXz43guVXfg=="
+          "hash": "rVRmYAg/GRXZVOy4Rp3/Vw=="
         }
       },
       "is_incremental": false,
@@ -234,7 +246,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.NetworkProtocolType.html",
-          "hash": "7IsqUzNEUh3hnWgWj0RZcA=="
+          "hash": "jAXLtwDcE7LYXQcjbCbJrA=="
         }
       },
       "is_incremental": false,
@@ -246,7 +258,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.OpenVpnCipherType.html",
-          "hash": "gsTWUyHv3DF7hvjlC8VW5w=="
+          "hash": "SfFXzoLmMJgfziaCkQuwlw=="
         }
       },
       "is_incremental": false,
@@ -258,7 +270,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.OpenVpnLogLevel.html",
-          "hash": "lNvrlFhxL/zkHlFeqlOypw=="
+          "hash": "TIeqaT84JK4VdeiHUMPNjQ=="
         }
       },
       "is_incremental": false,
@@ -270,7 +282,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.OperationStatus.html",
-          "hash": "9Uo+ESnLqih+JDHdJnvXWQ=="
+          "hash": "i9P9WslWkUc4bMnjf73fhg=="
         }
       },
       "is_incremental": false,
@@ -282,7 +294,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.RefreshLocationListStatus.html",
-          "hash": "3Zjb9cQ03tb+zP7oYL7IbA=="
+          "hash": "jSvKKsoZNdrAlHiGJnR6Mw=="
         }
       },
       "is_incremental": false,
@@ -294,7 +306,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Enums.html",
-          "hash": "hkl8PrSYldHPdq+WEY7EAg=="
+          "hash": "OPGslUckVdWaK/VcRBVvqw=="
         }
       },
       "is_incremental": false,
@@ -306,19 +318,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Extensions.ExceptionExtensions.html",
-          "hash": "FpZq7MDZNQzzpbZ+kepE3w=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/VpnSDK.Extensions.LoadLevel.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/VpnSDK.Extensions.LoadLevel.html",
-          "hash": "UsfZbGTtbyuKHaZjvtMk9g=="
+          "hash": "9Zj1JgmiR+W+WEq+z+sFRA=="
         }
       },
       "is_incremental": false,
@@ -330,7 +330,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Extensions.LocationExtensions.html",
-          "hash": "en9dKx2I19CJzpXwDGAXzw=="
+          "hash": "NTwGfVGngSoofMAROWwj7Q=="
         }
       },
       "is_incremental": false,
@@ -342,7 +342,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Extensions.RegionLoadChecker.html",
-          "hash": "0alxvWy8Y1opX30Fa4mIJQ=="
+          "hash": "oLfCkWODzsKg7CknUcADng=="
         }
       },
       "is_incremental": false,
@@ -354,7 +354,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Extensions.html",
-          "hash": "U7e70GJfgAA7QcX/nWvCSA=="
+          "hash": "FOIp81b1RKVlArI0i7RIOA=="
         }
       },
       "is_incremental": false,
@@ -366,7 +366,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.FetchLocationsException.html",
-          "hash": "dOiE8nsDe5W67l2+nm7SXQ=="
+          "hash": "I3buku1K0MGcOwMno9KuIg=="
         }
       },
       "is_incremental": false,
@@ -378,7 +378,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.HTTPException.html",
-          "hash": "cNnFN96XzOV3WL3nq+1PeA=="
+          "hash": "vnfy96s/8j5RvEsDHxt98Q=="
         }
       },
       "is_incremental": false,
@@ -390,7 +390,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Helpers.BatchPingUtility.html",
-          "hash": "x8y4EHK2/X5mC0jWP73l1g=="
+          "hash": "3/lYLGjhomngGPP1D8lIFg=="
         }
       },
       "is_incremental": false,
@@ -402,7 +402,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Helpers.VpnProtocolDiagnostics.html",
-          "hash": "OsZj7P66Rn85kjVIOH2vJw=="
+          "hash": "SzSC1ZcLFZam7EcDsaM0AQ=="
         }
       },
       "is_incremental": false,
@@ -414,7 +414,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Helpers.html",
-          "hash": "HM7qbwK+QzLdQhszUQMKIQ=="
+          "hash": "vMtKzF00gfxC320LrHE3gg=="
         }
       },
       "is_incremental": false,
@@ -426,7 +426,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IBestAvailable.html",
-          "hash": "ptLSSXvRXx91P4tqkCgXLA=="
+          "hash": "XuBOMLcfck1Zyi8uJi3E8w=="
         }
       },
       "is_incremental": false,
@@ -438,7 +438,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IConnectionConfiguration.html",
-          "hash": "3Zz1UW4wK1zSU3qiN+We8w=="
+          "hash": "0dF5W7dY5XdbNhlTQROGJQ=="
         }
       },
       "is_incremental": false,
@@ -450,7 +450,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IConnectionInfo.html",
-          "hash": "JuBK7UODG/jHaXTnXkBWRg=="
+          "hash": "Mj91FxvxhRgnNSy9AFs5bA=="
         }
       },
       "is_incremental": false,
@@ -462,7 +462,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.ILocation.html",
-          "hash": "i8SmlSdHXeXnV7rDCyG+Fw=="
+          "hash": "/xnKBWqTmkEf8YhuVvlKBg=="
         }
       },
       "is_incremental": false,
@@ -474,7 +474,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IOpenVpnConnectionConfiguration.html",
-          "hash": "kd9w8WwU4hNFmxZk4aOpjQ=="
+          "hash": "tsTXoCQ6oWmXKpRoTCoPNA=="
         }
       },
       "is_incremental": false,
@@ -486,7 +486,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IRasConnectionConfiguration.html",
-          "hash": "maLpceA88M4Kf/qwZ6NhfA=="
+          "hash": "wJ+AfFb+9BFXLdwCZyK6pw=="
         }
       },
       "is_incremental": false,
@@ -498,7 +498,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IRegion.html",
-          "hash": "YWLmqn79dK0hIAz5Op7TVA=="
+          "hash": "G7ELoOS4LxR2OexTyp7hIg=="
         }
       },
       "is_incremental": false,
@@ -510,7 +510,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.ISDK.html",
-          "hash": "kxj3rCK4qEKByvjlSz7f3g=="
+          "hash": "6YicB3BFgST0O2Vnvwe6pA=="
         }
       },
       "is_incremental": false,
@@ -522,7 +522,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.IUser.html",
-          "hash": "t1OO7EJGqbAYU3nVM7nVwQ=="
+          "hash": "k7EWq5fBzatMARhgJT4C1w=="
         }
       },
       "is_incremental": false,
@@ -534,7 +534,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.Interfaces.html",
-          "hash": "DNkptAMIX2JLtsJ0OACnDg=="
+          "hash": "lrH2zVNlN+euIuKE444CaA=="
         }
       },
       "is_incremental": false,
@@ -546,7 +546,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.InvalidConfigurationException.html",
-          "hash": "pK7idAvLYfTvU+9rparLrA=="
+          "hash": "ztcI4vrPiGdLrvaN7CX5lw=="
         }
       },
       "is_incremental": false,
@@ -558,7 +558,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.NotAuthorizedException.html",
-          "hash": "VyeKMyDSy3U99zBqvJs+ow=="
+          "hash": "oe68dZApPdR/IePU70hP/w=="
         }
       },
       "is_incremental": false,
@@ -570,7 +570,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.NullLocationException.html",
-          "hash": "5ZbEKUhgGDXn8kLjjAAKbg=="
+          "hash": "PB9Ik7o5FlHrNuWdyUdaCA=="
         }
       },
       "is_incremental": false,
@@ -582,7 +582,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.OAuthException.html",
-          "hash": "c7CL1ijA3ICwOIg41k4jEA=="
+          "hash": "ykD+araGJKz3P1ZTr3Sqkw=="
         }
       },
       "is_incremental": false,
@@ -594,7 +594,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.OpenVpnConnectionConfigurationBuilder.html",
-          "hash": "Xiq3I+2UMV2g2cVdFOvR9Q=="
+          "hash": "jDUMo+ZAxtP6JyrAOo1dLg=="
         }
       },
       "is_incremental": false,
@@ -606,7 +606,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.RasConnectionConfigurationBuilder.html",
-          "hash": "+pRn99VW2l9JDRIKjhxISg=="
+          "hash": "YFpns/jbtNS/4NERq42bkQ=="
         }
       },
       "is_incremental": false,
@@ -618,7 +618,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.ReconnectOnPowerEventException.html",
-          "hash": "2EtMg3EwStTd4Am2m4Mzig=="
+          "hash": "XZzJS+173ztnx01XIMIsDw=="
         }
       },
       "is_incremental": false,
@@ -630,7 +630,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKBuilder-1.html",
-          "hash": "sxdr3TGfzd8Sx7sE8f4k7g=="
+          "hash": "LhCAxmz9ZE+9M+D1HvJa+Q=="
         }
       },
       "is_incremental": false,
@@ -642,7 +642,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKChangeEventHandler-1.html",
-          "hash": "U5FE7Ha6YG1XLy8j0ACpwg=="
+          "hash": "jF/u8/Lrd+ZGUDpg/f+W3Q=="
         }
       },
       "is_incremental": false,
@@ -654,7 +654,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKEventHandler-1.html",
-          "hash": "w5d6ziia/KAEuWtO5hB8CQ=="
+          "hash": "UOHFFSP2KSwhTF+w/SrxUw=="
         }
       },
       "is_incremental": false,
@@ -666,7 +666,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKEventHandler.html",
-          "hash": "nncKnZMCrm80Zqrz80ccCA=="
+          "hash": "JNbJ26FKlwo8igwJZSVvyA=="
         }
       },
       "is_incremental": false,
@@ -678,7 +678,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKOperationEventHandler-1.html",
-          "hash": "vbupjvTLZxRvr7hqYaRLeA=="
+          "hash": "6g5D80qHOv8/mgExCqgL3g=="
         }
       },
       "is_incremental": false,
@@ -690,7 +690,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.SDKOperationEventHandler.html",
-          "hash": "bLNeoTjVeclZxtpscQu5uA=="
+          "hash": "+1HwFkKkfLaXvRiLr2WneA=="
         }
       },
       "is_incremental": false,
@@ -702,7 +702,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.TapAdapterException.html",
-          "hash": "m5b7KL4Sdh7HU1rDV0WN9g=="
+          "hash": "BxzZ2ewYaDSDdniR7/jf5w=="
         }
       },
       "is_incremental": false,
@@ -714,7 +714,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.UnknownErrorException.html",
-          "hash": "b5rP9vHnO5+s7l6PKzzyuQ=="
+          "hash": "N4DLLnvOsJHQFR1ANKgydw=="
         }
       },
       "is_incremental": false,
@@ -726,7 +726,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.UnsupportedProtocolException.html",
-          "hash": "O1VEbWcOybDrczeq8MN+IQ=="
+          "hash": "BwTUkAJx9U5Xz0OvjJIj5w=="
         }
       },
       "is_incremental": false,
@@ -738,7 +738,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.VPNAuthenticationException.html",
-          "hash": "TfzGyfA5qOQVp184gjf78w=="
+          "hash": "42GsU7BjhDPVwm/3v1K5tQ=="
         }
       },
       "is_incremental": false,
@@ -750,7 +750,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.VpnException.html",
-          "hash": "QgLjizJfmuzfBBevuJYuBA=="
+          "hash": "Gob9LRNAMewWAh1zGjjwCQ=="
         }
       },
       "is_incremental": false,
@@ -762,7 +762,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.WFPException.html",
-          "hash": "9KfyXr2fUo4nDNGd8EXwJQ=="
+          "hash": "aBAfujNLvFtN63sdoaky3w=="
         }
       },
       "is_incremental": false,
@@ -774,7 +774,7 @@
       "output": {
         ".html": {
           "relative_path": "api/VpnSDK.html",
-          "hash": "D359loR4g8TNQe7Nqf6amg=="
+          "hash": "CaMxgbGfw1L+oVQgD1T9SA=="
         }
       },
       "is_incremental": false,
@@ -786,7 +786,7 @@
       "output": {
         ".html": {
           "relative_path": "api/index.html",
-          "hash": "yEJPWPqwdcmzSzj01KPv1w=="
+          "hash": "50bYcpOInD+zUeNdzmUdIQ=="
         }
       },
       "is_incremental": false,
@@ -798,7 +798,7 @@
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "0w+NlxuzXgTnDD9s/7fMgQ=="
+          "hash": "m7vgZR7uvTCsSknbqVcqwg=="
         }
       },
       "is_incremental": false,
@@ -873,7 +873,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 2,
-          "skipped_file_count": 2
+          "skipped_file_count": 1
         }
       }
     },
